--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Journal</string>
+    <string-array name="drawer_items">
+        <item>Home</item><item>List</item><item>Add</item><item>Settings</item>
+    </string-array>
 </resources>
