List Page added, Add page added.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
     <string-array name="drawer_items">
         <item>Home</item><item>List</item><item>Add</item><item>Settings</item>
     </string-array>
+    <string-array name="cat_spinner_list">
+        <item>Work</item><item>Personal</item>
+    </string-array>
 </resources>
